--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ Assets/[Ii]mport/
 /[Bb]uilds/
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
+ideas.txt
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
