--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 #
 Assets/[Ii]mport/
+Assets/Audio/Music/
 /[Ll]ibrary/
 /[Tt]emp/
 /[Oo]bj/
