--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,6 +4,8 @@
     "com.unity.cinemachine": "2.9.7",
     "com.unity.collab-proxy": "2.7.1",
     "com.unity.feature.development": "1.0.1",
+    "com.unity.probuilder": "5.2.4",
+    "com.unity.progrids": "3.0.3-preview.6",
     "com.unity.render-pipelines.universal": "14.0.9",
     "com.unity.textmeshpro": "3.0.9",
     "com.unity.timeline": "1.7.7",
