Victory animation sequence almost complete

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,4 @@ crashlytics-build.properties
 Assets/Materials/Glow Outline Material.mat
 Assets/Materials/Glow Outline Material.mat
 Assets/Materials/Glow Outline Material.mat
+Assets/Materials/Glow Outline Material.mat
